Changelog
=========

1.10-dev - (unreleased)
-----------------------

1.9 - (2010-10-06)
------------------
 * Bug fix: for ims_timeline: remove assessment id from code that puts together the 
   children of a specification [tiberich #3741]
 * Bug fix: use object review state for display in timeline [tiberich]
 * Allow editors to link an specifications as versioned if the code is not unique [tiberich #3650]

1.8 - (2010-09-30)
------------------
 * Feature: Show external data references when in assessment view [demarant #3732]
 * Change: No longer need redefinitions for ObjectReadinessView for specs and assessments [tiberich #3694]
 * Feature: Add two new catalog metadata columns: comments and published_readiness [tiberich #3645]
 * Change: Use catalog search and brains to display the ims_timeline [tiberich #3645]
 * Feature: Display not ready specs and assessments in red, with an icon that AJAX 
   loads the readiness status in a tooltip, in the ims_timeline [tiberich #3645]
 * Change: Add customized view template for ExternalDataSpecs [tiberich #3192]
 * Feature: On new assessment version, 'File' children are not copied [ghicaale #3601]
 * Feature: Link indicators and/or assessments with comments on
     timeline template [ghicaale #3601]
 * Bug fix: Fixed adding policy document with '(' in title [tiberich #3614]
 * Bug fix: Link directly to Scientific Reference if they don't have a remote url [tiberich #3646]
 * Bug fix: Improved portlet readiness display for Assessments [tiberich #3606]
 * Feature: Added custom faceted widget to be used in sorting indicators [tiberich #3502]
 * Change: Made assessment agg edit to reload the portlet readiness [tiberich #3605]
 * Change: Add event subscriber for Assessment state change. It publishes all related figures on
   assessment publication [tiberich #3644]

1.7 - (2010-09-06)
------------------
 * Change: Added two new checks on Assessment readiness [tiberich 3603]